--- a/android_gradle/RandomQuotesWidget/src/main/res/values/strings.xml
+++ b/android_gradle/RandomQuotesWidget/src/main/res/values/strings.xml
@@ -1,15 +1,23 @@
 <resources>
-
+    <!-- Configure Screen String resources -->
     <string name="app_name">Random Quotes Widget</string>
-    <string name="configure_screen_title">Widget Configuration</string>
-    <string name="file_dir_name_label"></string>
-    <string name="configure_screen_instructions">
+    <string name="config_title_textview">Widget Configuration</string>
+    <string name="config_instructions_textview">
         Please enter the paths for the text files with your quotes, 
         pick multiple files with a file browser or enter them manually.
         Separate multiple files with the ; character. \n
         e.g. you can enter: storage/sdcard0/file1.txt;storage/extSdCard/file2.txt 
     </string>
-    <string name="configure_screen_log">*** Configuration Screen Log *** \n</string>
-    <string name="ok_label">OK</string>
-    <string name="browse_label">Browse</string>
+    <string name="config_log_edittext">*** Configuration Screen Log *** \n</string>
+    <string name="config_ok_button">OK</string>
+    <string name="config_browse_button">Browse</string>
+    
+    <!-- Widget Screen String resources -->
+    <string name="widget_file_name_textview">widget_file_name_textview: Loading Configuration</string>
+    <string name="widget_update_textview">
+        No user preferences found, widget needs to be configured
+    </string>
+    <string name="widget_line_number_textview">widget_line_number_textview: tap to configure</string>
+    <string name="widget_queue_number_textview">queue: tap to configure</string>
+        
 </resources>
