--- a/android_gradle/RandomQuotes/RandomQuotesApp/src/main/res/values/strings.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesApp/src/main/res/values/strings.xml
@@ -1,15 +1,22 @@
 <resources>
-
     <string name="app_name">Random Quotes App</string>
-    <string name="configure_screen_title">App Configuration</string>
-    <string name="file_dir_name_label"></string>
+    
+    <!-- configure screen string resources -->
+    <string name="config_title_textview">App Configuration</string>
     <string name="configure_screen_instructions">
         Please enter the paths for the text files with your quotes, 
         pick multiple files with a file browser or enter them manually.
         Separate multiple files with the ; character. \n
         e.g. you can enter: storage/sdcard0/file1.txt;storage/extSdCard/file2.txt 
     </string>
-    <string name="configure_screen_log">*** Configuration Screen Log *** \n</string>
-    <string name="ok_label">OK</string>
-    <string name="browse_label">Browse</string>
+    <string name="config_log_edittext">*** Configuration Screen Log *** \n</string>
+    <string name="config_ok_button">OK</string>
+    <string name="config_browse_button">Browse</string>
+    
+    <!-- App screen string resources -->
+    <string name="app_file_name_textview">no text file(s), tap to configure</string>
+    <string name="app_update_textview">No user/data preferences found</string>
+    <string name="app_line_number_textview">0, tap to configure</string>
+    <string name="app_queue_number_textview">0/0, tap to configure</string>    
+    
 </resources>
