--- a/android_gradle/RandomQuotes/RandomQuotesWidget/src/main/res/values/strings.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesWidget/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <!-- Configure Screen String resources -->
     <string name="app_name">Random Quotes Widget</string>
+    
+    <!-- Configure Screen String resources -->
     <string name="config_title_textview">Widget Configuration</string>
     <string name="config_instructions_textview">
         Please enter the paths for the text files with your quotes, 
@@ -13,11 +14,9 @@
     <string name="config_browse_button">Browse</string>
     
     <!-- Widget Screen String resources -->
-    <string name="widget_file_name_textview">widget_file_name_textview: Loading Configuration</string>
-    <string name="widget_update_textview">
-        No user preferences found, widget needs to be configured
-    </string>
-    <string name="widget_line_number_textview">widget_line_number_textview: tap to configure</string>
-    <string name="widget_queue_number_textview">queue: tap to configure</string>
+    <string name="widget_file_name_textview">no text file(s)</string>
+    <string name="widget_update_textview">No user/data preferences found</string>
+    <string name="widget_line_number_textview">0</string>
+    <string name="widget_queue_number_textview">0/0</string>
         
 </resources>
