--- a/android_gradle/RandomQuotes/RandomQuotesWidget/src/main/res/values/strings.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesWidget/src/main/res/values/strings.xml
@@ -1,17 +1,33 @@
 <resources>
     <string name="app_name">Random Quotes Widget</string>
     
-    <!-- Configure Screen String resources -->
-    <string name="config_title_textview">Widget Configuration</string>
-    <string name="config_instructions_textview">
-        Please enter the paths for the text files with your quotes, 
-        pick multiple files with a file browser or enter them manually.
-        Separate multiple files with the ; character. \n
-        e.g. you can enter: storage/sdcard0/file1.txt;storage/extSdCard/file2.txt 
+    <!-- configure screen string resources -->
+    <string name="config_title">Random Quotes Widget Configuration</string>
+    <string name="config_files_title">
+        Enter the paths for the text files with your quotes.
+    </string>    
+    <string name="config_files_instructions">
+        Pick/scan (using a file browser) or enter them manually 
+        (separate multiple files with the ; character).
     </string>
-    <string name="config_log_edittext">*** Configuration Screen Log *** \n</string>
-    <string name="config_ok_button">OK</string>
     <string name="config_browse_button">Browse</string>
+    <string name="config_scan_button">Scan</string> 
+    <string name="config_time_title">
+        Enter the update period.
+    </string>
+    <string name="config_time_period_instructions">
+        Update period (minutes): How often a new random quote is displayed.
+    </string>
+    <string-array name="config_time_period_array">
+        <item>1</item>
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+    </string-array>
+    <string name="config_save_button">Save Configuration</string>    
+    <string name="config_log_edittext">*** Configuration Screen Log *** \n</string>
     
     <!-- Widget Screen String resources -->
     <string name="widget_file_name_textview">no text file(s)</string>
